# betanet-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix
docs/: README.md  api.md  architecture.md  contributing.md  development.md  linting-formatting.md  testing.md
examples/: api_demo.c  example_client.c  example_server.c
include/: betanet.h  betanet_log.h
scripts/: validate_frame_parsing.sh
spec/: betanet-1.2.md  betanet.md
src/: betanet.c  crypto.c  debug.c  htx.c  naming.c  noise.c
tests/: betanet_internal.h  test_api.c  test_core.c  test_crypto.c  test_htx.c  test_htx_frames.c  test_integration_client_server.c  test_l2_secure_channel.c  test_logging.c  test_naming.c  test_noise.c  test_server.c  test_smoke_client_server.c
